# objectInspector-3D

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
src/: __init__.py  __main__.py  main.py
src/effects/: __init__.py  post_processing.py
src/geometry/: __init__.py  advanced_surfaces.py  architectural_models.py  assembly.py  complex_assemblies.py  detailed_parts.py  mesh.py  primitives.py  procedural_assemblies.py  realistic_assemblies.py  scientific_models.py  transforms.py
src/input/: __init__.py  base.py  synthetic.py  webcam.py
src/loaders/: __init__.py  model_loader.py
src/ml/: __init__.py  base.py  classifier.py  depth_estimator.py  feature_detector.py  model_manager.py  pose_estimator.py
src/rendering/: __init__.py  camera.py  label_renderer.py  lighting.py  projector.py  renderer.py
src/ui/: __init__.py  panel.py  slider.py
src/visualization/: __init__.py  base.py  exploded.py  manager.py  ml_overlay.py  points.py  solid.py  wireframe.py
